--- a/webapp/index.html
+++ b/webapp/index.html
@@ -407,7 +407,7 @@ const PRODUCTS = [
     name: "Champagne",
     farm: "Selection",
     category: "🌈 mdma",
-    video: "video/CHAMPGNE.MP4",
+    video: "video/champagne.MP4",
     variants: [
       {label:"1G", grams:1, price:20},
       {label:"2G", grams:2, price:40},
@@ -421,7 +421,7 @@ const PRODUCTS = [
     name: "El Jefe",
     farm: "colombie",
     category: "❄️ blanche neige",
-    video: "video/el jefe.MP4",
+    video: "video/el_jefe.MP4",
     variants: [
       {label:"0,5G", grams:0.5, price:30},
       {label:"1G", grams:1, price:50},
@@ -435,8 +435,8 @@ const PRODUCTS = [
     name: "skittlez Cake 120u",
     farm: "hash montaine",
     category: "🤯 filtré",
-    pic: "img/SKITTLEZ_CAKE.JPG",
-    video: "video/SKITTLEZ_CAKE.MP4",
+    pic: "img/skittlez_cake.JPG",
+    video: "video/skittlez_cake.MP4",
     variants: [
       {label:"2,5G", grams:2.5, price:20},
       {label:"5G", grams:5, price:40},
@@ -449,7 +449,7 @@ const PRODUCTS = [
     name: "Pistacchio 73u",
     farm: "hash montaine",
     category: "🤯 filtré",
-    pic: "img/PISTACCHIO.JPG",
+    pic: "img/pistacchio.JPG",
     video: "video/pistacchio.MP4",
     variants: [
       {label:"3G", grams:3, price:30},
@@ -477,7 +477,7 @@ const PRODUCTS = [
     name: "Lemon x Gelato",
     farm: "top shelf",
     category: "🇺🇸 cali us",
-    video: "video/LEMONXGELATO.MP4",
+    video: "video/lemonxgelato.MP4",
     variants: [
       {label:"1,66G", grams:1.66, price:20},
       {label:"3,5G", grams:3.5, price:40},
@@ -490,7 +490,7 @@ const PRODUCTS = [
     name: "Georgia Pie",
     farm: "top shelf",
     category: "🇺🇸 cali us",
-    video: "video/GEOGIA_PIE.MP4",
+    video: "video/georgia_pie.MP4",
     variants: [
       {label:"1,66G", grams:1.66, price:20},
       {label:"3,5G", grams:3.5, price:40},
