--- a/webapp/index.html
+++ b/webapp/index.html
@@ -432,7 +432,7 @@ const PRODUCTS = [
   },
   {
     id: 5,
-    name: "skittlez Cake 120u",
+    name: "Skittlez Cake 120u",
     farm: "hash montaine",
     category: "🤯 filtré",
     pic: "img/skittlez_cake.JPG",
@@ -453,8 +453,8 @@ const PRODUCTS = [
     video: "video/pistacchio.MP4",
     variants: [
       {label:"3G", grams:3, price:30},
-      {label:"4,5G", grams:4.5, price:30},
-      {label:"10G", grams:10, price:60},
+      {label:"5G", grams:5, price:50},
+      {label:"10G", grams:10, price:90},
       {label:"50G", grams:50, price:250},
     ]
   },
@@ -504,7 +504,6 @@ const PRODUCTS = [
     farm: "Selection",
     category: "💊 bonbon",
     video: "video/domino.MP4",
-    // Ici ce sont des unités, on laisse grams=0 et on met l’info dans le label
     variants: [
       {label:"3 unités", grams:0, price:20},
       {label:"10 unités", grams:0, price:60},
@@ -515,7 +514,7 @@ const PRODUCTS = [
     id: 11,
     name: "Fresh Frozen",
     farm: "FRESH",
-    category: "filtré 🤯",
+    category: "🤯 filtré",
     video: "video/fresh_frozen.MP4",
     variants: [
       {label:"1,1G", grams:1.1, price:20},
